<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/myLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="0" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="110dp"
        android:layout_y="10dp"
        android:text="@string/title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="30dp"
        android:layout_y="50dp"
        android:text="@string/roll_no" />

    <EditText
        android:id="@+id/editRollno"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_x="150dp"
        android:layout_y="50dp"
        android:inputType="number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="30dp"
        android:layout_y="100dp"
        android:text="@string/name" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_x="150dp"
        android:layout_y="100dp"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="30dp"
        android:layout_y="150dp"
        android:text="@string/marks" />

    <EditText
        android:id="@+id/editMarks"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_x="150dp"
        android:layout_y="150dp"
        android:inputType="number" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_x="30dp"
        android:layout_y="200dp"
        android:text="@string/add" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_x="150dp"
        android:layout_y="200dp"
        android:text="@string/delete" />

    <Button
        android:id="@+id/btnModify"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_x="30dp"
        android:layout_y="250dp"
        android:text="@string/modify" />

    <Button
        android:id="@+id/btnView"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_x="150dp"
        android:layout_y="250dp"
        android:text="@string/view" />

    <Button
        android:id="@+id/btnViewAll"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_x="30dp"
        android:layout_y="300dp"
        android:text="@string/view_all" />

    <Button
        android:id="@+id/btnShowInfo"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_x="150dp"
        android:layout_y="300dp"
        android:text="@string/show_info" />

</AbsoluteLayout>